--- a/src/app/tarifas/tarifas.component.html
+++ b/src/app/tarifas/tarifas.component.html
@@ -1,5 +1,5 @@
 <div class="bg-red-900 text-white min-h-screen">
-  <div class="border-b-2 border-gray-300 mb-8 pb-4">
+  <div class="border-b-2 border-gray-300 mb-8 pb-4 shadow-xl">
     <h1 class="text-3xl md:text-5xl font-bold text-center pt-6">TARIFAS</h1>
     <p class="text-center text-lg md:text-xl text-white/90 mt-2">
       Cada plan está diseñado para adaptarse a tus necesidades de envío. Desde envíos personales hasta logística
